resources/route-ibm-licensing-service-instance.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations: {}
  name: ibm-licensing-service-instance
  namespace: ibm-licensing
spec:
  port:
    targetPort: api-port
  tls:
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDqjCCApKgAwIBAgIDAnmGMA0GCSqGSIb3DQEBCwUAMGMxDDAKBgNVBAoTA0lC
[...]
      A+i+PzlmK0PBU48nCvfFgkYE6g5v+Xv1moIW1BOi
      -----END CERTIFICATE-----
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDUTCCAjmgAwIBAgIIHKn5qmcs/sYwDQYJKoZIhvcNAQELBQAwNjE0MDIGA1UE
[...]
      //0tEiyxq4ZYqVwJFBWwFSfsuzm7ocT4VP/u/iA9/MvO1Q1Pmg==
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: None
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEpAIBAAKCAQEAtOgX7ECfANs2bBbz65/trS7y7t0/eiDu41qD9lb2ejDezRii
[...]
      cZSbZsoyk+mFPNNM6qzmiUemjiblfBLpzjCei+KKTAZLaBKcbEvGBQ==
      -----END RSA PRIVATE KEY-----
    termination: reencrypt
  to:
    kind: Service
    name: ibm-licensing-service-instance
    weight: 100
